--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Document</title>
+    <title>Random Quote Generator</title>
 </head>
 
 <body>
-    <h1 class="title" id="title">title</h1>
-    <button class="randombtn" id="randombtn">Get a random quote</button>
-
+    <h1 class="title" id="title">Random Quote Generator</h1>
+    <button class="randombtn" id="randombtn">
+        <span class="randombtn__text" id="randombtn">GET A RANDOM QUOTE</button>
+    </button>
     <section class="quoteSection" id="quoteSection">
         <q class="quoteSection__quote" id="quote"></q>
         <img class="quoteSection__img" alt="">
@@ -19,4 +20,5 @@
     </section>
 </body>
 <script defer src="scripts/script.js"></script>
+
 </html>
